--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;700&display=swap');
+
+
+:root{
+  --bg-dark-blue: #111120;
+  --bg-mid-blue: #1a1a31;
+  --light-blue: #333547;
+  --yellow:#ffa940;
+  --dark-yellow:#ce8731;
+  --blue:#00a4ff;
+  --dark-blue:#037ec0;
+  --pink: #d949ff;
+  --dark-pink: #a339c0;
+  --red: #ff2828;
+  --dark-red: #c22020;
+  --green: #9cff42;
+  --dark-green: #6baf2b;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #111120;
+  font-family: 'Baloo Tamma 2', cursive;
+  padding: 0;
+  margin: 0;
 }
+
+.w-100{
+  width: 100vw !important;
+}
+
+.h-100{
+  height: 100vh !important;
+}
+
+.align-items-center{
+  align-items: center;
+}
+
+.justify-content-center{
+  justify-content: center;
+}
+
+.mx-5{
+  margin: 0px 5px;
+}
+
+.mx-10{
+  margin: 0px 10px;
+}
+
+.my-5{
+  margin: 5px 0px;
+}
+
+.my-10{
+  margin: 10px 0px;
+}
+
+.mt-10{
+  margin-top: 10px;
+}
+
+.mb-10{
+  margin-bottom: 10px;
+}
+
+.py-20{
+  padding: 20px 0px !important;
+}
+
+.rounded-bottom{
+  border-bottom-left-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
+}
+
+.rounded-top{
+  border-bottom-left-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+  border-top-left-radius: 5px !important;
+  border-top-right-radius: 5px !important;
+}
+
+.rounded-none{
+  border-radius: 0px !important;
+}
+
+.btn{
+  padding: 10px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.bg-green{
+  background-color: var(--green);
+}
+
+.bg-blue{
+  background-color: var(--blue);
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.hover-dark-green:hover{
+  background-color: var(--dark-green);
+}
+
+.hover-dark-blue:hover{
+  background-color: var(--dark-blue);
+}
+
+.hover-dark-red:hover{
+  background-color: var(--dark-red);
+}
+
+.hover-dark-pink:hover{
+  background-color: var(--dark-pink);
+}
+
+
+.bg-dark-blue{
+  background-color: var(--bg-dark-blue);
+}
+
+.bg-mid-blue{
+  background-color: var(--bg-mid-blue);
+}
+
+.bg-red{
+  background-color: var(--red);
+}
+
+.border-light-blue{
+  border: solid 1px var(--light-blue);
+}
+
+.font-size-1-5{
+  font-size: 1.5em;
+}
+
+.text-white{
+  color: white;
+}
+
