--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 }
 
 body{
-  background-color: #111120;
+  background-color: var(--bg-dark-blue);
   font-family: 'Baloo Tamma 2', cursive;
   padding: 0;
   margin: 0;
